
- #12213: Dynlink library, improve legibility of error messages
  (Samuel Hym, review by Gabriel Scherer and Nicolás Ojeda Bär)

### Tools:

- #12185: New script language for ocamltest.
  (Damien Doligez with Florian Angeletti, Sébastien Hinderer, Gabriel Scherer,
   review by Sébastien Hinderer and Gabriel Scherer)

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

- #12216, #12248: Prevent reordering of atomic loads during instruction
  scheduling.  This is for reference, as instruction scheduling is currently
  unused in OCaml 5.
  (Xavier Leroy, report by Luc Maranget and KC Sivaramakrishnan,
   review by Nicolás Ojeda Bär)

### Build system:

- #12198: continue the merge of the sub-makefiles into the root Makefile
  started with #11243, #11248, #11268, #11420 and #11675.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)

### Bug fixes:

- #12255, #12256: Handle large signal numbers correctly (Nick Barnes,
   review by David Allsopp).

OCaml 5.1.0
---------------

### Language features:

- #9975, #11365: Make empty types (`type t = |`) immediate.
  (Antal Spector-Zabusky, review by Gabriel Scherer)

* #11694: Add short syntax for generative functor types `() -> ...`
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär,
  Jacques Garrigue)

- #11457: Remove old polymorphic variant syntax.
  With ``type t = [ `A | `B ]``, one could use the syntax `#t` in types,
  where it means the same thing as `[< t]`, and in patterns, where it means
  ``(`A | `B)``. The use of `#t` in types for polymorphic variants
  was deprecated since 2001, and is now removed. The syntax remains available
  in patterns, or for objects -- when `t` is a class type.
  (Stefan Muenzel, review by Gabriel Scherer and Jacques Garrigue)

- #11984: Add dedicated syntax for generative functor application.
  Previously, OCaml did not disinguish between `F ()` and